--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,3 +1,3 @@
-current_promo: hero-design-systems.html
-auth_promo: hero-design-systems.html
+current_promo: hero-take5-campaign.html
+auth_promo: hero-take5-campaign.html
 live_coding: false
