Add Blue Beanie Month 2021 hero
- Update hero text and CTA to promote GYM-016

--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,3 +1,3 @@
-current_promo: hero-take5-campaign.html
-auth_promo: hero-take5-campaign.html
+current_promo: hero-bbd-2021.html
+auth_promo: hero-bbd-2021.html
 live_coding: false
