--- a/_data/courses/GYM-004.yml
+++ b/_data/courses/GYM-004.yml
@@ -9,6 +9,7 @@ poster_art: /img/course-artwork/png/gym-004.png
 topic: "Web Design & Development"
 short_description: "Learn how to convert your HTML/CSS design into a WordPress website. Discover how to set up a local development environment, and add WordPress tags to your design."
 instructor: ghodgkinson
+credential: "Badge"
 skills:
   - label: "Intermediate HTML/CSS"
   - label: "WordPress themes"
