--- a/_data/courses/GYM-015.yml
+++ b/_data/courses/GYM-015.yml
@@ -15,6 +15,7 @@ subtopics:
   - label: "Adobe XD"
 short_description: "Learn how to use prototypes as a communication and collaboration device for building digital products and websites."
 instructor: jbantjes
+credential: "Badge"
 skills:
   - label: "How to choose the right method of prototyping"
   - label: "How to articulate the benefits of prototyping"
