--- a/_data/courses/GYM-100.yml
+++ b/_data/courses/GYM-100.yml
@@ -9,6 +9,7 @@ poster_art: /img/course-artwork/png/gym-100.png
 topic: "Web Design & Development"
 short_description: "Learn HTML and CSS and become the Web Designer that Developers love. Professional design experience is a prerequisite, but no prior web or coding experience is necessary."
 instructor: jwebb
+credential: "Certificate"
 skills:
  - label: "HTML basics"
  - label: "CSS basics"
