--- a/_data/courses/GYM-104.yml
+++ b/_data/courses/GYM-104.yml
@@ -9,6 +9,7 @@ poster_art: /img/course-artwork/png/gym-104.png
 topic: "JavaScript"
 short_description: "Learn the fundamentals of programming with JavaScript and get started on the road to its mastery."
 instructor: kpeters
+credential: "Certificate"
 skills:
  - label: "JavaScript"
  - label: "Programming basics"
