--- a/_data/courses/GYM-107.yml
+++ b/_data/courses/GYM-107.yml
@@ -9,6 +9,7 @@ poster_art: /img/course-artwork/png/gym-107.png
 topic: "Web Design & Development"
 short_description: "This course will prepare you to be a front-end developer by walking you through the process of building a simple, responsive website using HTML, CSS and JavaScript."
 instructor: agustafson
+credential: "Certificate"
 skills:
  - label: "HTML Markup"
  - label: "Using CSS as a design tool"
