--- a/_data/courses/GYM-700.yml
+++ b/_data/courses/GYM-700.yml
@@ -9,6 +9,7 @@ poster_art: /img/course-artwork/png/gym-700.png
 topic: "Portfolio Workshop"
 short_description: "Portfolio Workshop"
 instructor: josborn
+credential: ""
 skills:
   - label: "Populate me"
   - label: "Populate me"
