--- a/_data/courses/GYM-005.yml
+++ b/_data/courses/GYM-005.yml
@@ -9,6 +9,7 @@ poster_art: /img/course-artwork/png/gym-005.png
 topic: "Prototyping"
 short_description: "Learn how to use Sketch tools and features in order to build an interactive prototype for a mobile website."
 instructor: josborn
+credential: "Badge"
 skills:
   - label: "Sketch fundamentals"
   - label: "Building static wireframes and prototypes"
