--- a/_data/courses/GYM-006.yml
+++ b/_data/courses/GYM-006.yml
@@ -9,6 +9,7 @@ poster_art: /img/course-artwork/png/gym-006.png
 topic: "Web Design & Development"
 short_description: "Learn the basics of version control and get a high-level overview of both Git and GitHub. Perfect for someone with little to no first-hand experience with either."
 instructor: jausura
+credential: "Badge"
 skills:
   - label: "Version control"
   - label: "Project workflow"
