--- a/_data/courses/GYM-007.yml
+++ b/_data/courses/GYM-007.yml
@@ -9,6 +9,7 @@ poster_art: /img/course-artwork/png/gym-007.png
 topic: "Web Design & Development"
 short_description: "Learn some of the latest standards and thinking around coding HTML forms using the new HTML5 tags and attributes."
 instructor: jkramer
+credential: "Badge"
 skills:
   - label: "Web Forms"
   - label: "HTML"
@@ -18,5 +19,5 @@ audience:
   - label: "Developers"
   - label: "Designers"
   - label: "Digital Creatives"
-  
+
 ---
