--- a/_data/courses/GYM-008.yml
+++ b/_data/courses/GYM-008.yml
@@ -9,6 +9,7 @@ poster_art: /img/course-artwork/png/gym-008.png
 topic: "Prototyping"
 short_description: "Learn how to use the conditional logic features in Axure in order to quickly create an interactive prototype."
 instructor: tslate
+credential: "Badge"
 skills:
   - label: "Interactive prototyping"
   - label: "Basic programming logic"
