--- a/_data/courses/GYM-009.yml
+++ b/_data/courses/GYM-009.yml
@@ -8,7 +8,7 @@ url: /courses/GYM/009/0/about
 poster_art: /img/course-artwork/png/gym-009.png
 topic: "Web Design & Development"
 short_description: "This course will teach you how to create themes for Drupal 8. Specifically, you will learn how to install a local development environment for Drupal 8, and use the new TWIG templating engine to customize the structure and style of your theme."
-instructor: ghodgkinson
+instructor: ghodgkinson\credential: "Badge"
 skills:
   - label: "Intermediate HTML/CSS"
   - label: "Drupal theming"
