--- a/_data/courses/GYM-014.yml
+++ b/_data/courses/GYM-014.yml
@@ -12,6 +12,7 @@ subtopics:
   - label: "Pattern Library"
 short_description: "Learn how to use Atomic Design methodology within Pattern Lab in order to create reusable user interface components."
 instructor: bfrost
+credential: "Badge"
 skills:
   - label: "Website prototyping"
   - label: "Designing with dynamic data"
