--- a/_data/courses/GYM-017.yml
+++ b/_data/courses/GYM-017.yml
@@ -11,6 +11,7 @@ subtopics:
   - label: "Design Systems"
 short_description: "Learn how to effectively integrate pattern libraries and design systems into your organization’s workflow."
 instructor: emarcotte
+credential: "Badge"
 skills:
   - label: "Design Thinking"
   - label: "User Experience Design"
