--- a/_data/courses/GYM-018.yml
+++ b/_data/courses/GYM-018.yml
@@ -11,6 +11,7 @@ subtopics:
   - label: "Design Systems"
 short_description: "Learn how to incorporate pattern libraries and design systems into your workflow."
 instructor: emarcotte
+credential: "Badge"
 skills:
   - label: "Working with pattern libraries"
   - label: "User experience design"
