--- a/_data/courses/GYM-019.yml
+++ b/_data/courses/GYM-019.yml
@@ -11,6 +11,7 @@ subtopics:
   - label: "Design Systems"
 short_description: "Learn how to use your development skills to help build and support an effective and thriving design system."
 instructor: emarcotte
+credential: "Badge"
 skills:
   - label: "Organizing and naming best practices"
   - label: "Working with design tokens"
