--- a/_data/courses/GYM-020.yml
+++ b/_data/courses/GYM-020.yml
@@ -11,6 +11,7 @@ subtopics:
   - label: "Design Systems"
 short_description: "Learn how pattern libraries and design systems can change and improve the work your teams do on a daily basis."
 instructor: emarcotte
+credential: "Badge"
 skills:
   - label: "Improving team collaboration"
   - label: "Design thinking"
