--- a/_data/courses/GYM-102.yml
+++ b/_data/courses/GYM-102.yml
@@ -9,6 +9,7 @@ poster_art: /img/course-artwork/png/gym-102.png
 topic: "JavaScript"
 short_description: "This course will teach you 5 easy techniques for adding interactivity to your web pages. By the end of the course, you’ll be able to add features and style to your web pages, from simple animations to complex dynamic content."
 instructor: dporter
+credential: "Certificate"
 skills:
  - label: "Navigation, animation, and server interaction"
  - label: "JavaScript"
