--- a/_data/courses/GYM-008.yml
+++ b/_data/courses/GYM-008.yml
@@ -9,7 +9,8 @@ poster_art: /img/course-artwork/png/gym-008.png
 topic: "Prototyping"
 short_description: "Learn how to use the conditional logic features in Axure in order to quickly create an interactive prototype."
 instructor: tslate
-credential: "Badge"
+credential: badge
+course_level: null
 skills:
   - label: "Interactive prototyping"
   - label: "Basic programming logic"
