--- a/_data/courses/GYM-011.yml
+++ b/_data/courses/GYM-011.yml
@@ -9,7 +9,8 @@ poster_art: /img/course-artwork/png/gym-011.png
 topic: "Web Design & Development"
 short_description: "In this course, you will get a familiarity with all aspects of the built-in developer tools within the Chrome browser. Understanding how to use these tools will speed up your development time and help you create bug-free, high-performing pages and web applications."
 instructor: kpeters
-credential: "Badge"
+credential: badge
+course_level: null
 skills:
   - label: "HTML & CSS Modification"
   - label: "Console Debugging"
