--- a/_data/courses/GYM-016.yml
+++ b/_data/courses/GYM-016.yml
@@ -11,7 +11,8 @@ subtopics:
   - label: "Accessibility"
 short_description: "Learn accessible and responsive design best practices to help make a more user-friendly web for everyone."
 instructor: emarcotte
-credential: "Badge"
+credential: badge
+course_level: null
 skills:
   - label: "Web accessibility"
   - label: "Responsive design"
