--- a/_data/courses/GYM-104.yml
+++ b/_data/courses/GYM-104.yml
@@ -9,7 +9,8 @@ poster_art: /img/course-artwork/png/gym-104.png
 topic: "JavaScript"
 short_description: "Learn the fundamentals of programming with JavaScript and get started on the road to its mastery."
 instructor: kpeters
-credential: "Certificate"
+credential: certificate
+course_level: null
 skills:
  - label: "JavaScript"
  - label: "Programming basics"
