--- a/_data/courses/GYM-106.yml
+++ b/_data/courses/GYM-106.yml
@@ -9,7 +9,8 @@ poster_art: /img/course-artwork/png/gym-106.png
 topic: "Content Creation"
 short_description: "Learn the design and visual principles needed to create effective information graphics and data visualizations."
 instructor: groberts
-credential: "Certificate"
+credential: certificate
+course_level: null
 skills:
  - label: "Visual design principles"
  - label: "Interactive design principles"
