--- a/_data/courses/GYM-107.yml
+++ b/_data/courses/GYM-107.yml
@@ -9,7 +9,8 @@ poster_art: /img/course-artwork/png/gym-107.png
 topic: "Web Design & Development"
 short_description: "This course will prepare you to be a front-end developer by walking you through the process of building a simple, responsive website using HTML, CSS and JavaScript."
 instructor: agustafson
-credential: "Certificate"
+credential: certificate
+course_level: null
 skills:
  - label: "HTML Markup"
  - label: "Using CSS as a design tool"
