--- a/_data/courses/GYM-001.yml
+++ b/_data/courses/GYM-001.yml
@@ -9,7 +9,8 @@ live: true
 topic: "Career Skills"
 short_description: "Learn how to estimate, plan, track, and manage your time in order to complete projects. Being busy isn’t a bad thing, but not being in control of your own time is."
 instructor: bharned
-credential: "Badge"
+credential: badge
+course_level: null
 skills:
   - label: "Project estimation"
   - label: "Time tracking"
