--- a/_data/courses/GYM-017.yml
+++ b/_data/courses/GYM-017.yml
@@ -11,7 +11,8 @@ subtopics:
   - label: "Design Systems"
 short_description: "Learn how to effectively integrate pattern libraries and design systems into your organization’s workflow."
 instructor: emarcotte
-credential: "Badge"
+credential: badge
+course_level: null
 skills:
   - label: "Design Thinking"
   - label: "User Experience Design"
