--- a/_data/courses/GYM-018.yml
+++ b/_data/courses/GYM-018.yml
@@ -11,7 +11,8 @@ subtopics:
   - label: "Design Systems"
 short_description: "Learn how to incorporate pattern libraries and design systems into your workflow."
 instructor: emarcotte
-credential: "Badge"
+credential: badge
+course_level: null
 skills:
   - label: "Working with pattern libraries"
   - label: "User experience design"
