--- a/_data/courses/GYM-020.yml
+++ b/_data/courses/GYM-020.yml
@@ -11,7 +11,8 @@ subtopics:
   - label: "Design Systems"
 short_description: "Learn how pattern libraries and design systems can change and improve the work your teams do on a daily basis."
 instructor: emarcotte
-credential: "Badge"
+credential: badge
+course_level: null
 skills:
   - label: "Improving team collaboration"
   - label: "Design thinking"
