--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,3 +1,3 @@
-current_promo: hero-take5-campaign.html
-auth_promo: hero-take5-campaign.html
+current_promo: hero-courses-evergreen.html
+auth_promo: hero-courses-evergreen.html
 live_coding: false
