--- a/_data/courses/GYM-100.yml
+++ b/_data/courses/GYM-100.yml
@@ -4,20 +4,21 @@ title: "Coding for Designers"
 date: 2019-10-28T00:00:00-04:00
 course_type: full
 live: true
+retired: true
 url: /courses/GYM/100/0/about
 poster_art: /img/course-artwork/png/gym-100.png
 topic: "Web Design & Development"
 short_description: "Learn HTML and CSS and become the Web Designer that Developers love. Professional design experience is a prerequisite, but no prior web or coding experience is necessary."
 instructor: jwebb
 skills:
- - label: "HTML basics"
- - label: "CSS basics"
- - label: "Bootstrap basics"
- - label: "And more…"
+  - label: "HTML basics"
+  - label: "CSS basics"
+  - label: "Bootstrap basics"
+  - label: "And more…"
 audience:
- - label: "Designers"
- - label: "Creatives"
- - label: "Copy Editors"
- - label: "Anyone struggling with HTML"
+  - label: "Designers"
+  - label: "Creatives"
+  - label: "Copy Editors"
+  - label: "Anyone struggling with HTML"
 
 ---
