--- a/_data/courses/GYM-100.yml
+++ b/_data/courses/GYM-100.yml
@@ -4,7 +4,7 @@ title: "Coding for Designers"
 date: 2019-10-28T00:00:00-04:00
 course_type: full
 live: true
-retired: true
+retired_message: "This course is retiring on March 25, 2022.<br> Enrollment ends on January 31, 2022."
 url: /courses/GYM/100/0/about
 poster_art: /img/course-artwork/png/gym-100.png
 topic: "Web Design & Development"
