--- a/_data/courses/GYM-100.yml
+++ b/_data/courses/GYM-100.yml
@@ -3,7 +3,7 @@ course_ID: GYM-100
 title: "Coding for Designers"
 date: 2019-10-28T00:00:00-04:00
 course_type: full
-live: true
+live: false
 retired_message:
   1: "This course is retiring on March 25, 2022.<br> Enrollment ends on January 31, 2022."
   2: "This course is retiring and all coursework needs to be completed by March 25, 2022."
