--- a/_dev_config.yml
+++ b/_dev_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title: Gymnasium Static Content
-url: https://dev--gymcms.netlify.com
+url: https://dev.thegymcms.com
 gymurl: https://gymnasium.dev
 aqassetsurl: https://stag-assets.aquent.com
 timezone: America/New_York
