Update GYM-006 title case
- Update camel case

--- a/_data/courses/GYM-006.yml
+++ b/_data/courses/GYM-006.yml
@@ -1,6 +1,6 @@
 ---
 course_ID: GYM-006
-title: "Introduction to Git and Github"
+title: "Introduction to Git and GitHub"
 date: 2019-10-28T00:00:00-04:00
 course_type: short
 live: true
