--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.2'
 services:
   jekyll:
     image: jekyll/jekyll:latest
+    environment:
+        - JEKYLL_ENV=local
     command: jekyll serve --watch --force_polling --config _local_config.yml
     ports:
         - 4000:4000
