--- a/_data/courses/GYM-109.yml
+++ b/_data/courses/GYM-109.yml
@@ -6,7 +6,7 @@ course_type: full
 live: true
 url: /courses/course-v1:GYM+109+0/about
 poster_art: /img/course-artwork/png/gym-109.png
-topic: "Web Design & Development"
+topic: "Design & Development"
 short_description: "This is a hands-on, code-intensive course on how to build high-performance, responsive websites that look great across multiple screen sizes and devices."
 instructor: jpamental
 skills: 
