--- a/_data/take5/GYM-5022.yml
+++ b/_data/take5/GYM-5022.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5022/
 poster_art: /img/take5/posters/gym-5022.jpg
 live: true
 instructor: "Jeremy Osborn"
-topic: "Web Design & Development"
+topic: "Design & Development"
 video_ID: fOP3xEY77bc
 video_duration: "4:57"
 featured: false
