--- a/_data/take5/GYM-5024.yml
+++ b/_data/take5/GYM-5024.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5024/
 poster_art: /img/take5/posters/gym-5024.jpg
 live: true
 instructor: "Jeremy Osborn"
-topic: "Web Design & Development"
+topic: "Design & Development"
 video_ID: Xb3pBj4PKxg
 video_duration: "4:59"
 featured: false
