--- a/_data/take5/GYM-5026.yml
+++ b/_data/take5/GYM-5026.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5026/
 poster_art: /img/take5/posters/gym-5026.jpg
 live: true
 instructor: "Mike Bifulco"
-topic: "Web Design & Development"
+topic: "Design & Development"
 video_ID: ukPI1zlxKqg
 video_duration: "4:58"
 featured: false
