--- a/_data/courses/GYM-014.yml
+++ b/_data/courses/GYM-014.yml
@@ -6,7 +6,7 @@ course_type: short
 live: true
 url: /courses/course-v1:GYM+014+0/about
 poster_art: /img/course-artwork/png/gym-014.png
-topic: "Web Design & Development"
+topic: "Design & Development"
 subtopics:
   - label: "Design Systems"
   - label: "Pattern Library"
