--- a/_data/courses/GYM-100.yml
+++ b/_data/courses/GYM-100.yml
@@ -9,7 +9,7 @@ retired_message:
   2: "This course has retired."
 url: /courses/GYM/100/0/about
 poster_art: /img/course-artwork/png/gym-100.png
-topic: "Web Design & Development"
+topic: "Design & Development"
 short_description: "Learn HTML and CSS and become the Web Designer that Developers love. Professional design experience is a prerequisite, but no prior web or coding experience is necessary."
 instructor: jwebb
 skills:
