--- a/_data/take5/GYM-5001.yml
+++ b/_data/take5/GYM-5001.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5001/
 poster_art: /img/take5/posters/gym-5001.jpg
 live: true
 instructor: "Jeremy Osborn"
-topic: "Web Design & Development"
+topic: "Design & Development"
 video_ID: zRNUPU2dujU
 video_duration: "4:59"
 featured: false
