--- a/_data/take5/GYM-5002.yml
+++ b/_data/take5/GYM-5002.yml
@@ -5,7 +5,7 @@ date: 2019-10-29T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5002/
 poster_art: /img/take5/posters/gym-5002.jpg
-topic: "Web Design & Development"
+topic: "Design & Development"
 live: true
 instructor: "Jeremy Osborn"
 video_ID: Q66-TDbHiIs
