--- a/_data/take5/GYM-5003.yml
+++ b/_data/take5/GYM-5003.yml
@@ -5,7 +5,7 @@ date: 2019-10-30T00:00:00-04:00
 course_type: take5
 url: /courses/take5/GYM-5003/
 poster_art: /img/take5/posters/gym-5003.jpg
-topic: "Web Design & Development"
+topic: "Design & Development"
 subtopics:
   - label: CSS
   - label: HTML
