--- a/_data/take5/GYM-5021.yml
+++ b/_data/take5/GYM-5021.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5021/
 poster_art: /img/take5/posters/gym-5021.jpg
 live: true
 instructor: "Jeremy Osborn"
-topic: "Web Design & Development"
+topic: "Design & Development"
 video_ID: qfDPi1nnHSk
 video_duration: "4:48"
 featured: false
