--- a/_data/take5/GYM-5031.yml
+++ b/_data/take5/GYM-5031.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5031/
 poster_art: /img/take5/posters/gym-5031.jpg
 live: true
 instructor: "Jeremy Osborn"
-topic: "Web Design & Development"
+topic: "Design & Development"
 video_ID: 0X4uxoKMwew
 video_duration: "4:59"
 featured: false
