--- a/_data/take5/GYM-5034.yml
+++ b/_data/take5/GYM-5034.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5034/
 poster_art: /img/take5/posters/gym-5034.jpg
 live: true
 instructor: "Ethan Marcotte"
-topic: "Web Design & Development"
+topic: "Design & Development"
 video_ID: fk-eu9TmFNk
 video_duration: "4:58"
 featured: false
