--- a/_data/take5/GYM-5035.yml
+++ b/_data/take5/GYM-5035.yml
@@ -7,7 +7,7 @@ url: /courses/take5/GYM-5035/
 poster_art: /img/take5/posters/gym-5035.jpg
 live: true
 instructor: "Ethan Marcotte"
-topic: "Web Design & Development"
+topic: "Design & Development"
 video_ID: m1_iOLbtEFM
 video_duration: "4:59"
 featured: false
