--- a/_data/take5/GYM-5039.yml
+++ b/_data/take5/GYM-5039.yml
@@ -21,6 +21,6 @@ related_content:
   url: "https://developer.mozilla.org/en-US/docs/Learn/HTML/Tables/Advanced"
 - label: "Creating Accessible Tables"
   url: "https://webaim.org/techniques/tables/data"
-- label: "Web Accessibility Tutorials: Tables Concepts"
+- label: "Accessibility Tutorials: Tables Concepts"
   url: "https://www.w3.org/WAI/tutorials/tables/"
 ---
