--- a/_data/courses/GYM-103.yml
+++ b/_data/courses/GYM-103.yml
@@ -7,7 +7,7 @@ live: true
 url: /courses/GYM/103/0/about
 poster_art: /img/course-artwork/png/gym-103.png
 topic: "User Experience"
-short_description: "Learn how to apply user-centered design principles to improve your website and mobile app design. A must-take course for anyone working in web design and development."
+short_description: "Learn how to apply user-centered design principles to improve your website and mobile app design. A must-take course for anyone working in design and development."
 instructor: jwebb
 skills:
  - label: "User research"
