--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,3 +1,3 @@
-current_promo: hero-courses-evergreen.html
+current_promo: hero-ukraine-relief.html
 auth_promo: hero-courses-evergreen.html
 live_coding: false
