Update collections data and sort
- Update ID, copy GYM-XXX format
- Add ID to page
- Update sort, newest to oldest
- Update filename, use three digits

--- a/_data/collections/col001-web-development.yml
+++ b/_data/collections/col001-web-development.yml
@@ -1,5 +1,5 @@
 ---
-collection_ID: col0001-web-development
+collection_ID: COL-001
 title: "Web Development"
 topic: "Development"
 short_description: "Develop the skills you need to build fast, responsive websites."
