--- a/_data/collections/col002-ux-design.yml
+++ b/_data/collections/col002-ux-design.yml
@@ -1,5 +1,5 @@
 ---
-collection_ID: col0002-ux-design
+collection_ID: COL-002
 title: "UX Design"
 topic: "UX"
 short_description: "User experience can make or break a website. Let’s put yours to the test."
