--- a/_data/collections/col003-prototyping.yml
+++ b/_data/collections/col003-prototyping.yml
@@ -1,5 +1,5 @@
 ---
-collection_ID: col0003-prototyping
+collection_ID: COL-003
 title: "Prototyping"
 topic: "Prototyping"
 short_description: "Take the guesswork out of your design process and build better products."
