--- a/_data/collections/col006-design-systems.yml
+++ b/_data/collections/col006-design-systems.yml
@@ -1,5 +1,5 @@
 ---
-collection_ID: col0006-design-systems
+collection_ID: COL-006
 title: "Design Systems"
 topic: "Design Systems"
 short_description: "Teamwork (and creating effective pattern libraries) makes the dream work."
