--- a/_data/collections/col004-accessibility.yml
+++ b/_data/collections/col004-accessibility.yml
@@ -1,5 +1,5 @@
 ---
-collection_ID: col0004-accessibility
+collection_ID: COL-004
 title: "Accessibility"
 topic: "Accessibility"
 short_description: "No matter what your title is, creating an inclusive web is everyone’s job."
