--- a/_data/collections/col005-remote-work.yml
+++ b/_data/collections/col005-remote-work.yml
@@ -1,5 +1,5 @@
 ---
-collection_ID: col0005-remote-work
+collection_ID: COL-005
 title: "Remote Work"
 topic: "Career Skills"
 short_description: "Whether you’re WFH or a digital nomad, we’ve got you covered."
