--- a/_dev_config.yml
+++ b/_dev_config.yml
@@ -1,11 +1,11 @@
 # Setup
 title: Gymnasium Static Content
 url: https://dev--gymcms.netlify.com
-gymurl: https://courses.gymna.si
+gymurl: https://gymnasium.dev
 aqassetsurl: https://stag-assets.aquent.com
 timezone: America/New_York
 environment: development
-   
+
 # Building
 
 exclude:
