--- a/_data/courses/GYM-005.yml
+++ b/_data/courses/GYM-005.yml
@@ -7,7 +7,8 @@ live: false
 url: /courses/GYM/005/0/about
 poster_art: /img/course-artwork/png/gym-005.png
 topic: "Prototyping"
-short_description: "Learn how to use Sketch tools and features in order to build an interactive prototype for a mobile website."
+short_description: "This course has been retired."
+short_description_orig: "Learn how to use Sketch tools and features in order to build an interactive prototype for a mobile website."
 instructor: josborn
 skills:
   - label: "Sketch fundamentals"
