--- a/_data/courses/GYM-008.yml
+++ b/_data/courses/GYM-008.yml
@@ -7,7 +7,8 @@ live: false
 url: /courses/GYM/008/0/about
 poster_art: /img/course-artwork/png/gym-008.png
 topic: "Prototyping"
-short_description: "Learn how to use the conditional logic features in Axure in order to quickly create an interactive prototype."
+short_description: "This course has been retired."
+short_description_orig: "Learn how to use the conditional logic features in Axure in order to quickly create an interactive prototype."
 instructor: tslate
 skills:
   - label: "Interactive prototyping"
