--- a/_data/courses/GYM-105.yml
+++ b/_data/courses/GYM-105.yml
@@ -4,6 +4,7 @@ title: "Writing for Web & Mobile"
 date: 2022-05-26T00:00:00-04:00
 course_type: full
 live: false
+retired_message:
   1: "<strong>This course has been retired.</strong>"
 url: /courses/GYM/105/0/about
 poster_art: /img/course-artwork/png/gym-105.png
