--- a/_data/courses/GYM-002.yml
+++ b/_data/courses/GYM-002.yml
@@ -5,21 +5,20 @@ date: 2022-05-27T00:00:00-04:00
 course_type: short
 live: false
 retired_message:
-  1: "<strong>This course has been retired.</strong> Due to outdated content, we don’t offer a badge for this course — but you can still view the lessons."
+  1: "<strong>This course has been retired.</strong> Due to outdated content, we dont offer a badge for this course  but you can still view the lessons."
 url: /courses/GYM/002/0/about
 poster_art: /img/course-artwork/png/gym-002.png
 topic: "Design & Development"
 short_description: "This course has been retired."
-short_description_orig: "Learn the basics of Node.js by building a sample \"social profile\" form."
+short_description_orig: "Learn the basics of Node.js by building a sample social profile form."
 instructor: jhargrove
 skills:
   - label: "Installing a Node.js server"
   - label: "Dynamic rendering with the Express view engine"
   - label: "Working with JSON data"
-  - label: "And more…"
+  - label: "And more"
 audience:
   - label: "Front-End Developers"
   - label: "Back-End Developers"
   - label: "JavaScript Developers and Programmers"
 ---
-
