--- a/_data/courses/GYM-002.yml
+++ b/_data/courses/GYM-002.yml
@@ -5,7 +5,7 @@ date: 2022-05-27T00:00:00-04:00
 course_type: short
 live: false
 retired_message:
-  1: "<strong>This course has been retired.</strong> Due to outdated content, we don’t offer a badge for this course  but you can still view the lessons."
+  1: "<strong>This course has been retired.</strong> Due to outdated content, we don’t offer a badge for this course — but you can still view the lessons."
 url: /courses/GYM/002/0/about
 poster_art: /img/course-artwork/png/gym-002.png
 topic: "Design & Development"
