Update retired course announcements
- Update GYM-003
- Update GYM-005
- Update GYM-008
- Update GYM-100
- Update GYM-101

--- a/_data/courses/GYM-008.yml
+++ b/_data/courses/GYM-008.yml
@@ -5,7 +5,7 @@ date: 2019-10-28T00:00:00-04:00
 course_type: short
 live: false
 retired_message:
-  1: "<strong>This course has been retired.</strong> Due to outdated content, we don’t offer a badge for this course — but you can still view the lessons."
+  1: "<strong>This course has been retired.</strong> Due to outdated content, we don’t offer a badge for this course, but you can still view the lessons."
 url: /courses/GYM/008/0/about
 poster_art: /img/course-artwork/png/gym-008.png
 topic: "Prototyping"
