--- a/_data/courses/GYM-100.yml
+++ b/_data/courses/GYM-100.yml
@@ -6,7 +6,7 @@ course_type: full
 live: false
 retired_message:
   1: "<strong>This course is retiring on March 25, 2022.</strong> All coursework needs to be completed by that date."
-  2: "<strong>This course has been retired.</strong>"
+  2: "<strong>This course has been retired.</strong> We recommend taking the course <a href='https://thegymnasium.com/courses/GYM/107/0/about'>Modern Web Design</a> instead. It’s a bit more advanced, but we think you’d get a lot out of it."
 url: /courses/GYM/100/0/about
 poster_art: /img/course-artwork/png/gym-100.png
 topic: "Design & Development"
