--- a/_data/hero.yml
+++ b/_data/hero.yml
@@ -1,3 +1,3 @@
-current_promo: hero-accessibility.html
-auth_promo: hero-accessibility.html
+current_promo: hero-ukraine-relief.html
+auth_promo: hero-ukraine-relief.html
 live_coding: false
